--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <nav>
-    <div class="logo">MOONLIGHT 🌙</div>
+    <div class="logo">MOONLIGHTCRAVINGS 🌙</div>
     <div style="display:flex; gap:10px;">
         <div class="wallet-pill">✨ <span id="user-points">0</span></div>
         <div onclick="openCart()" style="cursor:pointer; font-size:1.5rem">🛒<span id="cart-count" style="font-size:0.8rem; background:red; color:white; padding:2px 6px; border-radius:50%">0</span></div>
@@ -300,3 +300,4 @@
 </script>
 </body>
 </html>
+
