--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         .logo { font-size: 1.4rem; font-weight: bold; color: var(--rose-gold); letter-spacing: 1px; }
         .wallet-pill { background: linear-gradient(135deg, var(--plum), #6a1b9a); color: gold; padding: 8px 18px; border-radius: 30px; font-weight: bold; display: flex; align-items: center; gap: 8px; }
         
-        /* Popups & Modals */
         #claim-popup, #order-success-modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #fff; width: 320px; border-radius: 25px; z-index: 5000; text-align: center; box-shadow: 0 20px 60px rgba(0,0,0,0.4); padding: 25px; border: 2px solid var(--gold); }
         .overlay { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:4999; backdrop-filter: blur(3px); }
 
@@ -48,18 +47,18 @@
     <h2 style="color:var(--rose-gold); margin-top:0;">Order Placed! 🌙</h2>
     <p style="line-height:1.6;">Your treats are being prepared. We will contact you on WhatsApp shortly for confirmation.</p>
     <p style="font-size:0.9rem; color:#888;">Button unlocks in: <span id="timer-sec" style="font-weight:bold; color:var(--plum);">10</span>s</p>
-    <button id="success-close-btn" class="btn" disabled onclick="closeSuccessModal()">I UNDERSTAND</button>
+    <button id="success-close-btn" class="btn" disabled onclick="closeSuccessAndRefresh()">I UNDERSTAND</button>
 </div>
 
 <nav>
-    <div class="logo">MOONLIGHT 🌙</div>
+    <div class="logo">MOONLIGHTCRAVINGS 🌙</div>
     <div style="display:flex; gap:10px;">
         <div class="wallet-pill">✨ <span id="user-points">0</span></div>
         <div onclick="openCart()" style="cursor:pointer; font-size:1.5rem">🛒<span id="cart-count" style="font-size:0.8rem; background:red; color:white; padding:2px 6px; border-radius:50%">0</span></div>
     </div>
 </nav>
 
-<a href="support.html" class="emergency-btn">🆘 EMERGENCY HOTLINE & PAYMENT HELP</a>
+<a href="support.html" class="emergency-btn">🆘 IF YOU DID NOT GET A MESSAGE IN WHATSAPP REGARDING YOUR ORDER WITHIN A DAY, PLEASE CLICK THIS</a>
 
 <div class="container">
     <div class="card">
@@ -67,13 +66,19 @@
         <div class="card-body">
             <h3>Premium Cakes</h3>
             <select id="cake-select">
-                <optgroup label="Standard">
+                <optgroup label="Standard (Vanilla/Choco/Forest/Lemon)">
                     <option value="500" data-label="0.5kg Standard Cake">0.5kg - ₹500</option>
                     <option value="999" data-label="1kg Standard Cake">1kg - ₹999</option>
                 </optgroup>
-                <optgroup label="Special">
+                <optgroup label="Plum Cake">
+                    <option value="500" data-label="0.5kg Plum Cake">0.5kg - ₹500</option>
+                </optgroup>
+                <optgroup label="Special (Dark Choco / Orange)">
                     <option value="600" data-label="0.5kg Special Cake">0.5kg - ₹600</option>
                     <option value="1199" data-label="1kg Special Cake">1kg - ₹1199</option>
+                </optgroup>
+                <optgroup label="Banana Cake">
+                    <option value="350" data-label="0.5kg Banana Cake">0.5kg - ₹350</option>
                 </optgroup>
             </select>
             <button class="btn" onclick="addToCartBySelect('cake-select')">Add to Cart</button>
@@ -87,8 +92,49 @@
             <select id="cupcake-select">
                 <option value="200" data-label="5x Vanilla Cupcakes">Vanilla - ₹200</option>
                 <option value="200" data-label="5x Chocolate Cupcakes">Chocolate - ₹200</option>
+                <option value="200" data-label="5x Lemon Cupcakes">Lemon - ₹200</option>
+                <option value="275" data-label="5x Blueberry Cupcakes">Blueberry - ₹275</option>
             </select>
             <button class="btn" onclick="addToCartBySelect('cupcake-select')">Add to Cart</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?w=400">
+        <div class="card-body">
+            <h3>Dacquoise & Macarons</h3>
+            <select id="treat-select">
+                <option value="200" data-label="6pc Almond Dacquoise">Almond Dacquoise (6pcs) - ₹200</option>
+                <option value="250" data-label="6pc Pistachio Dacquoise">Pistachio Dacquoise (6pcs) - ₹250</option>
+                <option value="200" data-label="10pc Macarons">Macarons (10pcs) - ₹200</option>
+            </select>
+            <button class="btn" onclick="addToCartBySelect('treat-select')">Add to Cart</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?w=400">
+        <div class="card-body">
+            <h3>Cookie Boxes (8 pcs)</h3>
+            <select id="cookie-select">
+                <option value="200" data-label="8x Butter Cookies">Butter Cookies - ₹200</option>
+                <option value="200" data-label="8x Sugar Cookies">Sugar Cookies - ₹200</option>
+                <option value="240" data-label="8x Choco Chip Cookies">Choco Chip - ₹240</option>
+            </select>
+            <button class="btn" onclick="addToCartBySelect('cookie-select')">Add to Cart</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <img src="https://images.unsplash.com/photo-1551024506-0bccd828d307?w=400">
+        <div class="card-body">
+            <h3>Bakery Snacks</h3>
+            <select id="snack-select">
+                <option value="180" data-label="10pc Donut Holes">Donut Holes (10pcs) - ₹180</option>
+                <option value="150" data-label="6pc Churros">Churros (6pcs) - ₹150</option>
+                <option value="240" data-label="6pc Brownies">Brownies (6pcs) - ₹240</option>
+            </select>
+            <button class="btn" onclick="addToCartBySelect('snack-select')">Add to Cart</button>
         </div>
     </div>
 
@@ -187,7 +233,6 @@
             timestamp: firebase.firestore.FieldValue.serverTimestamp()
         });
 
-        // Trigger Success Modal with Countdown
         myCart = []; 
         renderCart();
         toggleChatWindow();
@@ -217,9 +262,8 @@
         }, 1000);
     }
 
-    function closeSuccessModal() {
-        document.getElementById('order-success-modal').style.display = 'none';
-        document.getElementById('modal-overlay').style.display = 'none';
+    function closeSuccessAndRefresh() {
+        location.reload(); // Refreshes the page
     }
 
     async function claimPoints() {
