--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
 <div class="overlay" id="modal-overlay"></div>
 
 <nav>
-    <div class="logo">MOONLIGHT 🌙</div>
+    <div class="logo">MOONLIGHTCRAVINGS 🌙</div>
     <div style="display:flex; gap:10px;">
         <div class="wallet-pill">✨ <span id="user-points">0</span></div>
         <div onclick="openCart()" style="cursor:pointer; font-size:1.5rem">🛒<span id="cart-count" style="font-size:0.8rem; background:red; color:white; padding:2px 6px; border-radius:50%">0</span></div>
     </div>
 </nav>
 
-<a href="support.html" class="emergency-btn">🆘 EMERGENCY HOTLINE & PAYMENT HELP</a>
+<a href="support.html" class="emergency-btn">🆘 IF YOU DON'T GET A WHATSAPP MESSAGE REGARDING YOUR RESPECTIVE ORDER, CLICK THIS!</a>
 
 <div class="hero-desc">
-    <h2>✨ Freshly baked with love, <br> no added preservatives. ✨</h2>
-    <p>Custom made treats are available for every occasion.</p>
+    <h2> Freshly baked with love, <br> no added preservatives. </h2>
+    <p> Custom made treats are available for every occasion. </p>
 </div>
 
 <div class="container">
@@ -316,3 +316,4 @@
 </script>
 </body>
 </html>
+
