--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             "Vanilla Cupcakes": "https://i.postimg.cc/mrkwC69n/Vanilla-cupcake.jpg",
             "Chocolate Cupcakes": "https://i.postimg.cc/nhcYfw30/Chocolate-cupcake.jpg",
             "Lemon Cupcakes": "https://i.postimg.cc/VL4ngWz8/Lemon-cupcake.jpg",
+            "Blueberry Cupcakes": "https://i.postimg.cc/rygRH2Dn/Blueberry-Cupcake.jpg",
             "Macarons": "https://i.postimg.cc/yY7rWjfx/Macarons.jpg",
             "Almond Dacquoise": "https://i.postimg.cc/XYRfB7Vg/Almon-Daquoise.jpg",
             "Pistachio Dacquoise": "https://i.postimg.cc/MpC7fKWn/Pistachio-Daquoise.jpg"
@@ -360,6 +361,8 @@
         
         if(label.includes("Black Forest")) {
             imgEl.src = "https://i.postimg.cc/W3PvhrFk/Black-forest.png";
+        } else if(label.includes("Dark Chocolate")) {
+            imgEl.src = "https://i.postimg.cc/hvCJQTkL/Dark-Chocolate-Cake.png";
         } else if(label.includes("Orange Cake")) {
             imgEl.src = "https://i.postimg.cc/L6gN0W0F/Orange-cake.jpg";
         } else if(label.includes("Funfetti")) {
