--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
 <div id="voucher-overlay">
     <div class="voucher-card">
         <div style="font-size: 3rem; margin-bottom: 15px;">🎟️</div>
-        <h1 class="neon-text">VOUCHERS</h1>
+        <h1 class="neon-text">Vouchers</h1>
         <p style="font-size: 0.9rem; font-style: italic; opacity: 0.8; line-height: 1.5;">
-            Blah blah Vouchers will come out soon, once a while. So keep your eyes peeked!
+            Moonlight Cravers(Best Solution) Vouchers will come out soon, once a while. So keep your eyes peeked!
         </p>
         
         <button class="btn" onclick="enableNotifications()" style="background: none; border: 1px solid var(--neon-pink); color: var(--neon-pink); margin: 20px 0; font-size: 0.8rem;">
-            🔔 ENABLE NOTIFICATIONS
+            Enable Notifications
         </button>
 
         <div style="border-top: 1px solid rgba(255,255,255,0.1); margin-top: 20px; padding-top: 20px;">
@@ -561,3 +561,4 @@
 </script>
 </body>
 </html>
+
