--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </div>
 <nav>
     <div class="logo-container">
-        <div class="logo">MOONLIGHTCRAVINGS 🌙</div>
+        <div class="logo">FUCKYOURDHAKHS 🌙</div>
         <button class="val-btn" onclick="openVal()">Valentines???</button>
         <button class="voucher-btn-nav" onclick="openVoucher()">Voucher????</button>
     </div>
@@ -291,3 +291,4 @@
 </script>
 </body>
 </html>
+
