--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moonlight Cravings | Premium Bakery</title>
-    <link rel="icon" href="https://i.postimg.cc/vxYDnR6G/icon.png">
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <meta name="title" content="Moonlight Cravings | Premium Bakery">
+<meta name="description" content="Custom made treats for every occasion. Moonlight x VB Collaboration.">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://moonlightcravings53.github.io/moonlight-site/">
+<meta property="og:title" content="Moonlight Cravings | Premium Bakery">
+<meta property="og:description" content="Custom made treats for every occasion. Moonlight x VB Collaboration.">
+<meta property="og:image" content="https://i.postimg.cc/1X6FLsmV/614595661_1819368908769275_8442615453582945422_n.png">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://moonlightcravings53.github.io/moonlight-site/">
+<meta property="twitter:title" content="Moonlight Cravings | Premium Bakery">
+<meta property="twitter:description" content="Custom made treats for every occasion. Moonlight x VB Collaboration.">
+<meta property="twitter:image" content="https://i.postimg.cc/1X6FLsmV/614595661_1819368908769275_8442615453582945422_n.png">
     <style>
         :root { 
             --pink: #fce4ec; 
