--- a/index.html
+++ b/index.html
@@ -18,20 +18,13 @@
             --black: #050505;
             --dark-grey: #121212;
             --venom-white: #ffffff;
-            --rose-gold: #b76e79; 
-            --plum: #4a148c; 
         }
         
         body { 
-            margin: 0;
-            font-family: 'Georgia', serif; 
-            background: var(--black); 
-            color: var(--venom-white); 
-            -webkit-user-select: none; 
-            user-select: none; 
-            overflow-x: hidden; 
-            position: relative; 
-            min-height: 100vh;
+            margin: 0; font-family: 'Georgia', serif; 
+            background: var(--black); color: var(--venom-white); 
+            -webkit-user-select: none; user-select: none; 
+            overflow-x: hidden; position: relative; min-height: 100vh;
         }
 
         /* Initial Device Detector */
@@ -42,10 +35,10 @@
             text-align: center; border: 5px solid white;
         }
 
-        /* Rotation Prompt - Only shows when mobile is selected and phone is vertical */
+        /* Rotation Prompt */
         #rotate-prompt {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.95); z-index: 50000;
+            background: rgba(0,0,0,0.98); z-index: 50000;
             flex-direction: column; justify-content: center; align-items: center; text-align: center;
             color: white; padding: 20px;
         }
@@ -78,12 +71,12 @@
             color: white; padding: 8px 18px; border-radius: 4px; font-weight: bold; display: flex; align-items: center; gap: 8px;
         }
 
-        .hero-desc { text-align: center; padding: 60px 20px; color: white; }
+        .hero-desc { text-align: center; padding: 40px 20px; color: white; }
         .hero-desc h2 { font-size: 2.5rem; letter-spacing: 5px; margin: 0; text-transform: uppercase; }
 
         .container { 
             max-width: 1200px; margin: auto; display: grid; 
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 30px; padding: 20px;
         }
         
         .card { 
@@ -100,7 +93,7 @@
 
         select, textarea, input { background: #111; color: white; border: 1px solid #444; padding: 10px; margin: 8px 0; width: 85%; outline: none; }
 
-        #chat-window { display: none; position: fixed; bottom: 90px; right: 20px; width: 340px; height: 550px; background: white; border-radius: 15px; z-index: 3000; flex-direction: column; overflow: hidden; color: black; border: 2px solid black; }
+        #chat-window { display: none; position: fixed; bottom: 20px; right: 20px; width: 340px; height: 85vh; background: white; border-radius: 10px; z-index: 3000; flex-direction: column; overflow: hidden; color: black; border: 3px solid black; }
         #secret-overlay { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background: black; z-index: 20000; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
         #order-success-modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #000; border: 2px solid white; color: white; padding: 30px; z-index: 10000; width: 300px; text-align: center; }
     </style>
@@ -109,7 +102,7 @@
 
 <div id="device-detector">
     <h1 style="letter-spacing: 10px;">SYSTEM START</h1>
-    <p>ARE YOU ON MOBILE OR COMPUTER?</p>
+    <p>PICK YOUR INTERFACE</p>
     <div style="display: flex; gap: 20px; margin-top: 20px;">
         <button class="btn" onclick="setResolution('mobile')">MOBILE</button>
         <button class="btn" onclick="setResolution('pc')">COMPUTER</button>
@@ -117,21 +110,13 @@
 </div>
 
 <div id="rotate-prompt">
-    <h1 style="font-size: 3rem;">🔄</h1>
+    <h1 style="font-size: 3.5rem;">🔄</h1>
     <h2>PLEASE ROTATE HORIZONTAL</h2>
-    <p>Turn your phone sideways to see every button and get the full experience.</p>
-    <button class="btn" style="margin-top: 20px;" onclick="closeRotatePrompt()">I'M READY</button>
+    <p>Turn your phone sideways to view the full bakery menu and order buttons.</p>
+    <button class="btn" style="margin-top: 20px;" onclick="closeRotatePrompt()">I AM ROTATED</button>
 </div>
 
 <div class="bg-animation" id="bg-elements"></div>
-<div class="overlay" id="modal-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:4999;"></div>
-
-<div id="secret-overlay">
-    <h1 style="font-size: 3rem;">WHISPER INTO THE VOID</h1>
-    <p style="font-style: italic; color: #666;">"Whatever Secrets Said Here, Gets Chosen."</p>
-    <input type="text" placeholder="..." style="background:transparent; border-bottom: 2px solid white; width: 60%; text-align: center; font-size: 1.5rem; margin: 30px;">
-    <button class="btn" onclick="closeSecret()">RETURN</button>
-</div>
 
 <nav>
     <div style="display:flex; align-items:center; gap:15px;">
@@ -146,7 +131,7 @@
 
 <div class="hero-desc">
     <h2>PREMIUM CRAVINGS.</h2>
-    <p>NO PRESERVATIVES. ONLY DARKNESS.</p>
+    <p>NO PRESERVATIVES. DARK ELEGANCE.</p>
 </div>
 
 <div class="container">
@@ -158,7 +143,6 @@
                 <option value="500" data-label="0.5kg Lemon Cake">Lemon: 0.5kg - ₹500</option>
                 <option value="999" data-label="1kg Lemon Cake">Lemon: 1kg - ₹999</option>
                 <option value="500" data-label="0.5kg Chocolate Cake">Chocolate: 0.5kg - ₹500</option>
-                <option value="999" data-label="1kg Chocolate Cake">Chocolate: 1kg - ₹999</option>
                 <option value="500" data-label="0.5kg Vanilla Cake">Vanilla: 0.5kg - ₹500</option>
                 <option value="500" data-label="0.5kg Black Forest Cake">Black Forest: 0.5kg - ₹500</option>
                 <option value="500" data-label="0.5kg Funfetti Cake">Funfetti: 0.5kg - ₹500</option>
@@ -172,25 +156,82 @@
         <button class="btn" onclick="addToCartBySelect('cake-select')">Add to Cart</button>
     </div>
 
+    <div class="card">
+        <img id="cupcake-img" src="https://images.unsplash.com/photo-1519869325930-281384150729?w=400">
+        <h3>Cupcakes (Box of 5)</h3>
+        <select id="cupcake-select" onchange="updateImage(this, 'cupcake-img')">
+            <option value="200" data-label="5x Vanilla Cupcakes">Vanilla - ₹200</option>
+            <option value="200" data-label="5x Chocolate Cupcakes">Chocolate - ₹200</option>
+            <option value="200" data-label="5x Lemon Cupcakes">Lemon - ₹200</option>
+            <option value="275" data-label="5x Blueberry Cupcakes">Blueberry - ₹275</option>
+        </select>
+        <button class="btn" onclick="addToCartBySelect('cupcake-select')">Add to Cart</button>
     </div>
 
+    <div class="card">
+        <img id="treat-img" src="https://images.unsplash.com/photo-1558961363-fa8fdf82db35?w=400">
+        <h3>Dacquoise & Macarons</h3>
+        <select id="treat-select" onchange="updateImage(this, 'treat-img')">
+            <option value="200" data-label="6pc Almond Dacquoise">Almond Dacquoise (6pcs) - ₹200</option>
+            <option value="250" data-label="6pc Pistachio Dacquoise">Pistachio Dacquoise (6pcs) - ₹250</option>
+            <option value="200" data-label="10pc Macarons">Macarons (10pcs) - ₹200</option>
+        </select>
+        <button class="btn" onclick="addToCartBySelect('treat-select')">Add to Cart</button>
+    </div>
+
+    <div class="card">
+        <img id="cookie-img" src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?w=400">
+        <h3>Cookie Boxes (8 pcs)</h3>
+        <select id="cookie-select" onchange="updateImage(this, 'cookie-img')">
+            <option value="200" data-label="8x Butter Cookies">Butter Cookies - ₹200</option>
+            <option value="200" data-label="8x Sugar Cookies">Sugar Cookies - ₹200</option>
+            <option value="240" data-label="8x Choco chip Cookies">Choco chip - ₹240</option>
+        </select>
+        <button class="btn" onclick="addToCartBySelect('cookie-select')">Add to Cart</button>
+    </div>
+
+    <div class="card">
+        <img id="snack-img" src="https://images.unsplash.com/photo-1551024506-0bccd828d307?w=400">
+        <h3>Bakery Snacks</h3>
+        <select id="snack-select" onchange="updateImage(this, 'snack-img')">
+            <option value="180" data-label="10pc Donut Holes">Donut Holes (10pcs) - ₹180</option>
+            <option value="150" data-label="6pc Churros">Churros (6pcs) - ₹150</option>
+            <option value="240" data-label="6pc Brownies">Brownies (6pcs) - ₹240</option>
+        </select>
+        <button class="btn" onclick="addToCartBySelect('snack-select')">Add to Cart</button>
+    </div>
+
+    <div class="card" style="display:flex; flex-direction:column; justify-content:center; padding: 20px;">
+        <h3>✨ Custom Requests</h3>
+        <textarea id="custom-req" placeholder="Describe your dream treat..."></textarea>
+        <button class="btn" onclick="addCustomToCart()">Add Custom Order</button>
+    </div>
+</div>
+
 <div id="chat-window">
-    <div style="background:#eee; padding:15px; display:flex; justify-content:space-between;"><h4>🛒 Your Cart</h4><button onclick="toggleChatWindow()">✕</button></div>
+    <div style="background:#000; color:white; padding:15px; display:flex; justify-content:space-between;"><h4>🛒 YOUR CART</h4><button onclick="toggleChatWindow()" style="background:none; color:white; border:none; cursor:pointer;">✕</button></div>
     <div style="padding:20px; overflow-y:auto; flex:1;">
         <div id="cart-items"></div><hr>
-        <div style="font-weight:bold; margin:10px 0;">Total: ₹<span id="cart-total-val">0</span></div>
-        <input type="text" id="c-name" placeholder="Full Name"><input type="text" id="c-phone" placeholder="WhatsApp Number">
+        <div style="font-weight:bold; margin:10px 0; font-size:1.2rem;">Total: ₹<span id="cart-total-val">0</span></div>
+        <input type="text" id="c-name" placeholder="Full Name">
+        <input type="text" id="c-phone" placeholder="WhatsApp Number">
         <select id="c-method" style="width:100%"><option value="Delivery">🚀 Delivery</option><option value="Pickup">🏪 Pickup</option></select>
         <input type="text" id="c-addr" placeholder="Address">
-        <button class="btn" style="width:100%; margin-top:10px; background:black; color:white;" onclick="submitOrder()">Place Order</button>
+        <button class="btn" style="width:100%; margin-top:10px; background:black; color:white; border:2px solid black;" onclick="submitOrder()">Place Order</button>
     </div>
 </div>
 
 <div id="order-success-modal">
     <h2>ORDER PLACED</h2>
     <p>Check WhatsApp for confirmation.</p>
-    <p style="font-size:0.8rem;">Unlocking in: <span id="timer-sec">10</span>s</p>
+    <p style="font-size:0.8rem;">Processing in: <span id="timer-sec">10</span>s</p>
     <button id="success-close-btn" class="btn" disabled onclick="location.reload()">OK</button>
+</div>
+
+<div id="secret-overlay">
+    <h1 style="font-size: 3rem;">WHISPER INTO THE VOID</h1>
+    <input type="text" placeholder="..." style="background:transparent; border-bottom: 2px solid white; width: 60%; text-align: center; font-size: 1.5rem; margin: 30px;">
+    <button class="btn" onclick="closeSecret()">RETURN</button>
 </div>
 
 <script>
@@ -209,17 +250,11 @@
     function setResolution(type) {
         document.getElementById('device-detector').style.display = 'none';
         if(type === 'mobile') { 
-            document.querySelector("meta[name=viewport]").setAttribute('content', 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0');
-            // Show the rotation prompt
             document.getElementById('rotate-prompt').style.display = 'flex';
         }
     }
+    function closeRotatePrompt() { document.getElementById('rotate-prompt').style.display = 'none'; }
 
-    function closeRotatePrompt() {
-        document.getElementById('rotate-prompt').style.display = 'none';
-    }
-
-    // Floating animation and shop functions
     function createFloatingBackground() { 
         const bg = document.getElementById('bg-elements');
         for(let i=0; i<15; i++) { 
@@ -233,15 +268,20 @@
         myCart.push({ name: label, price: parseInt(el.value) }); renderCart();
     }
 
+    function addCustomToCart() { 
+        const req = document.getElementById('custom-req').value; if(!req) return alert("What are your requirements?");
+        myCart.push({ name: "CUSTOM: " + req, price: 0 }); renderCart(); document.getElementById('custom-req').value = "";
+    }
+
     function renderCart() {
         document.getElementById('cart-count').innerText = myCart.length;
-        let t = 0; document.getElementById('cart-items').innerHTML = myCart.map((item, i) => { t += item.price; return `<div style="display:flex; justify-content:space-between;"><span>${item.name}</span><span>₹${item.price}</span></div>`; }).join('');
+        let t = 0; document.getElementById('cart-items').innerHTML = myCart.map((item, i) => { t += item.price; return `<div style="display:flex; justify-content:space-between; margin-bottom:5px;"><span>${item.name}</span><span>₹${item.price}</span></div>`; }).join('');
         document.getElementById('cart-total-val').innerText = t;
     }
 
     async function submitOrder() {
         const n = document.getElementById('c-name').value; const p = document.getElementById('c-phone').value;
-        if(!n || !p || myCart.length === 0) return alert("Fill details!");
+        if(!n || !p || myCart.length === 0) return alert("Fill all details!");
         await db.collection("orders").add({ name: n, phone: p, items: myCart.map(i => i.name).join(", "), price: document.getElementById('cart-total-val').innerText, customerIP: userIP, timestamp: firebase.firestore.FieldValue.serverTimestamp() });
         startSuccessCountdown();
     }
@@ -253,9 +293,14 @@
 
     function checkFunfetti(el) {
         const label = el.options[el.selectedIndex].getAttribute('data-label');
-        const imgEl = document.getElementById('cake-img');
         const map = { "Black Forest": "https://i.postimg.cc/W3PvhrFk/Black-forest.png", "Dark Chocolate": "https://i.postimg.cc/hvCJQTkL/Dark-Chocolate-Cake.png", "Orange": "https://i.postimg.cc/L6gN0F0F/Orange-cake.jpg", "Funfetti": "https://i.postimg.cc/R0GsjwSn/Fun-fetty.jpg", "Vanilla": "https://i.postimg.cc/mDJBBq3g/Vanilla-Cake.png", "Lemon": "https://i.postimg.cc/hvmgjrMs/Lemon-cake.png", "Banana": "https://i.postimg.cc/xdj0RLTT/Bannana-Cake.png" };
-        for (let k in map) { if(label.includes(k)) { imgEl.src = map[k]; return; } }
+        for (let k in map) { if(label.includes(k)) { document.getElementById('cake-img').src = map[k]; return; } }
+    }
+
+    function updateImage(sel, id) {
+        const label = sel.options[sel.selectedIndex].getAttribute('data-label');
+        const map = { "Donut": "https://i.postimg.cc/pXjYMKVW/Donut-holes.jpg", "Brownies": "https://i.postimg.cc/jqmQ1Mb8/brownies.jpg", "Churros": "https://i.postimg.cc/Qx7kZc8R/Churros.jpg", "Butter": "https://i.postimg.cc/k4Fd84Ky/butter-cookies.jpg", "Choco chip": "https://i.postimg.cc/NFHCTC3y/Chocolate-chip-cookies.jpg", "Sugar": "https://i.postimg.cc/J4jdzg3p/Sugar-cookies.jpg", "Macarons": "https://i.postimg.cc/yY7rWjfx/Macarons.jpg" };
+        for (let k in map) { if(label.includes(k)) { document.getElementById(id).src = map[k]; return; } }
     }
 
     function toggleChatWindow() { const w = document.getElementById('chat-window'); w.style.display = w.style.display === 'flex' ? 'none' : 'flex'; }
